fix: overlap issue

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -97,6 +97,7 @@ $xs: 450px;
 
     @media screen and (max-width: 1120px) {
         justify-content: center;
+        margin-top: 0;
 
         .card {
             height: 40vh;
@@ -104,7 +105,6 @@ $xs: 450px;
         }
     }
 
-    @media screen and (max-width: 770px) {
-        margin-top: 0;
-    }
+    // @media screen and (max-width: 770px) {
+    // }
 }
